templates/out.txt
  File "myCode.py", line 2
    
                           ^
SyntaxError: unexpected EOF while parsing
